# MUDIDI

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  requirements.txt  subs.txt
assets/: PROMPT.json
docs/: architecture.md  evaluation_metrics.md  mdf_field_reference.md  stage_1_evaluation_metrics.md  stage_1_methodology.md  stage_1_outline.md  stage_2_evaluation_metrics.md  stage_2_methodology.md  stage_2_outline.md  uv.md
evaluations/stage1_flat_eval/: stage1_flat_eval_detailed.csv  stage1_flat_eval_ocr_hint_detailed.csv  stage1_flat_eval_ocr_hint_summary.csv  stage1_flat_eval_summary.csv
evaluations/stage1_flat_eval/GLM-OCR-flat_alpha/: character_recognition.csv  markup_preservation.csv  structure_preservation.csv
evaluations/stage2_mdf_eval/: stage2_mdf_eval_summary.csv
evaluations/stage_1_ocr_hint/: stage1_flat_eval_ocr_hint_detailed.csv  stage1_flat_eval_ocr_hint_summary.csv
evaluations/stage_2_gold_cheat_sheet/: stage2_mdf_eval_summary.csv
examples/: README.md
examples/evaluation/: run_eval_ocr_hint_and_gold_cheat_sheet.sh  run_flatten_gold_label_s1.sh  run_stage1_eval.sh  run_stage1_eval_flat.sh  run_stage1_eval_ocr_hint.sh  run_stage2_eval.sh  run_stage2_eval_gold_cheat_sheet.sh  run_stage2_eval_mdf.sh
examples/helper/: install_models_venv.sh  run_extract_samples.sh  run_extract_sheets.sh  run_flatten_vlm_ocr.sh  run_mathpix_ocr.sh  run_normalize_stage1_output.sh
examples/inference/: run_directory_mode.sh  run_pdf_mode.sh
examples/label-studio/: run_label_studio_local.sh  run_label_studio_vm.sh  run_sync_label_studio.sh  run_sync_shilluk_gold.sh
examples/stage-1/: run_stage1_extraction.sh  run_stage1_per_lang_best_flat_alpha_ocr.sh
examples/stage-2/: run_stage2_extraction.sh  run_stage2_gold_cheatsheet.sh
inputs/: page.txt
label-studio/: setup.py
scripts/: audit_ocr_flat_noise.py  backfill_stage1_flat_from_markdown.py  export_google_sheet.py  export_label_studio_gold.py  extract_dictionary_samples.py  flatten_stage1_gold.py  generate_dictionary_languages_yaml.py  ocr_to_stage1_flat.py  run_mathpix_convert.py  validate_stage1_flat_experiment.py
src/mudidi/: paths.py
src/mudidi/cli/: main.py  (+4 more)
tests/: test_stage1_input.py  test_stage1_input_inference.py
tests/cli/: test_main.py
tests/config/: test_run_config.py
tests/extraction/: test_sample_entry.py  test_vlm_ocr_batch.py
tests/llm/: test_client_reasoning.py  test_client_reasoning_integration.py  test_field_discovery.py  test_mdf_marker_reference.py  test_pass_1.py  test_pass_1_multi.py  test_pass_2.py  test_prompt_store.py  test_stage2_direct_mdf.py
tests/mdf/: test_mdf_export.py
tests/ocr/: test_mathpix_convert.py
tests/schemas/: test_entry_numbers.py  test_field_cheatsheet.py
tests/scripts/: test_backfill_stage1_flat_from_markdown.py  test_export_label_studio_gold.py
tests/utils/: test_dictionary_languages.py  test_io.py  test_page_context.py  test_parse_rules_pages.py  test_pdf_render.py  test_pdf_split.py  test_stage2_page_selection.py
(+297 files in other folders)
