[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mudidi"
version = "0.1.0"
description = "Dictionary OCR and MDF extraction pipeline with benchmark and inference modes."
requires-python = ">=3.10"

dependencies = [
    "litellm",
    "python-docx",
    "Pillow",
    "pydantic",
    "python-dotenv",
    "pandas",
    "scikit-learn",
    "python-Levenshtein",
    "grapheme",
    "jiwer",
    "sacrebleu",
    "pymupdf>=1.27.2.2",
    "scipy>=1.15.3",
    "label-studio>=1.23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
paddle = [
    "paddlepaddle",
    "paddleocr",
]

[project.scripts]
mudidi = "mudidi.cli.main:main"
mudidi-eval-flat = "mudidi.cli.evaluate_stage1:main"
mudidi-eval-stage2-mdf = "mudidi.cli.evaluate_stage2_mdf:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mudidi"]

[tool.hatch.build.targets.wheel.force-include]
"src/mudidi/assets/PROMPT.json" = "mudidi/assets/PROMPT.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
package = true
